# ogl-particles

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: compile-instructions-vscode.md
src/: Application.cpp  Application.h  main.cpp
src/input/: Gamepad.cpp  Gamepad.h  Input.cpp  Input.h
src/particles/: AttractorEffect.cpp  AttractorEffect.h  BurningEffect.cpp  BurningEffect.h  Effect.cpp  Effect.h  FountainEffect.cpp  FountainEffect.h  GLParticleRenderer.cpp  GLParticleRenderer.h  ParticleData.cpp  ParticleData.h  ParticleGenerators.cpp  ParticleGenerators.h  ParticleRenderer.cpp  ParticleRenderer.h  ParticleSystem.cpp  ParticleSystem.h  ParticleUpdaters.cpp  ParticleUpdaters.h  Solver.cpp  Solver.h  TunnelEffect.cpp  TunnelEffect.h
src/render/: BufferObject.cpp  BufferObject.h  RenderContext.cpp  RenderContext.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h
src/shaders/: common.inc  particles.frag  particles.vert  quad.frag  quad.vert
src/ui/: CustomWidgets.cpp  CustomWidgets.h  IconFontDefines.h  PropertyPanel.cpp  PropertyPanel.h  SceneView.cpp  SceneView.h  Window.cpp  Window.h
src/utility/: Debug.cpp  Debug.h  FileSystem.cpp  FileSystem.h  PRNG.h  Timer.cpp  Timer.h  Types.h  Utils.cpp  Utils.h
